--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ disqus: cheehieu
 google_analytics: UA-56490050-1
 
 # Website
-url: http://niftyhedgehog.com
+url: https://niftyhedgehog.com
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
